@@ -2,6 +2,8 @@
 
 	* tools/tiffcrop.c (ROTATE_ANY): Fix Coverity 1294542 "Logical
 	vs. bitwise operator".
+	(readContigStripsIntoBuffer): Fix Coverity 1024545 "Division or
+	modulo by zero".
 
 2015-03-02  Even Rouault  <even.rouault@spatialys.com>
 
